hc: Add links to preparing-db page

--- a/hc/en/index.html
+++ b/hc/en/index.html
@@ -104,7 +104,8 @@
                     <li><a href="categories.html">Managing categories</a></li>
                     <li><a href="markup-plugins.html">Markup plugins</a></li>
                     <li><a href="using-plugins.html">Plugins</a></li>
-                    <li><a href="posting-blog-entry.html">Posting</a></li>
+                    <li><a href="posting-blog-entry.html">Posting Entries</a></li>
+                    <li><a href="preparing-db.html">Preparing a database</a></li>
                     <li><a href="rss.html">RSS</a></li>
                     <li><a href="shared-installation.html">Shared installations</a></li>
                     <li><a href="spam.html">Spam</a></li>
