--- a/hc/en/installation.html
+++ b/hc/en/installation.html
@@ -293,6 +293,8 @@
 
 <p>In this section, you must enter the credentials to access the selected database. First you choose the database type you want to use for Serendipity. Serendipity will only show the database types that are available to PHP. Note, that your provider must have given you credentials to access your database, and that this database must already exist. Serendipity requires an empty database, so if you have not yet created a database, just do that via the SQL command “CREATE DATABASE serendipity” using your favourite SQL tool (phpMyAdmin, phpPgAdmin, sqliteAdmin).</p>
 
+<p>Make sure, that you have read and correctly set “<a href="preparing-db.html">Preparing a database</a>” for Serendipity before!</p>
+
 <p>Now you just fill in the values you got from your provider for the host, user, password and database name fields.</p>
 
 <h4 id="docs-general-settings">General Settings</h4>
