hc: Add take a guided tour for zhe user documentation
and use a help center info icon
and replace the "Styx Help Center [en]" title with a linked "place-of-interest" icon

--- a/hc/en/approving-comments.html
+++ b/hc/en/approving-comments.html
@@ -82,17 +82,21 @@
             <div class="col-menu__wrapper">
                 <nav class="col-menu" role="navigation" aria-label="Help Center [en] documents navigation">
                     <ul>
-                        <li><a href="/hc">Styx Help Center</a></li>
-                        <li><a href="/hc/en">Documentation [en]</a></li>
-                        <li><a href="/hc/de">Dokumentation [de]</a></li>
-                        <li><a href="/hc/en/faq">Styx Help Center FAQ</a></li>
+                        <li><a href="/hc/"><img src="/i/info_icon-64.png" width="32" height="32"> Styx Help Center</a></li>
+                        <li><a href="/hc/en/">Documentation [en]</a></li>
+                        <li><a href="/hc/de/">Dokumentation [de]</a></li>
+                        <li><a href="/hc/en/faq/">Styx Help Center FAQ</a></li>
                     </ul>
                 </nav>
             </div>
             <div class="col-document__wrapper col-document__wrapper-documents">
                 <div class="col-document">
-                    <h1>Styx Help Center [en] - Comments</h1>
-                    <p><a href="index.html"><span class="icon arrow-left">←</span> back to main page</a></p>
+                    <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en]">⌘</a></span> - Approving Comments</h1>
+                    <ul class="document-nav">
+                        <li class="document-up"><a href="index.html"><span class="icon arrow-left">←</span> back to main page</a></li>
+                        <li class="document-current">« Approving Comments »</li>
+                        <li class="document-next"><a href="trackbacks-pingbacks-commentapi.html">Connecting Comments <span class="icon arrow-right">→</span></a></li>
+                    </ul>
                     <h2 id="docs-approve-comments">Approve comments</h2>
                     <p>You may wish to moderate comments visitors make to your entries so they are not seen by others until they have been approved. To enable this feature, check the box labeled “Comments &amp; trackbacks to this entry requires moderation” when first creating or editing an entry. You can also make this the default setting on a user by user basis from Backend → Personal Settings.</p>
                     <p>Once enabled, comments will not appear when first submitted. To approve moderated comments, go to Backend → Activity → Comments in the “Activity” menu.</p>
