--- a/hc/en/categories.html
+++ b/hc/en/categories.html
@@ -82,17 +82,21 @@
             <div class="col-menu__wrapper">
                 <nav class="col-menu" role="navigation" aria-label="Help Center [en] documents navigation">
                     <ul>
-                        <li><a href="/hc">Styx Help Center</a></li>
-                        <li><a href="/hc/en">Documentation [en]</a></li>
-                        <li><a href="/hc/de">Dokumentation [de]</a></li>
-                        <li><a href="/hc/en/faq">Styx Help Center FAQ</a></li>
+                        <li><a href="/hc/"><img src="/i/info_icon-64.png" width="32" height="32"> Styx Help Center</a></li>
+                        <li><a href="/hc/en/">Documentation [en]</a></li>
+                        <li><a href="/hc/de/">Dokumentation [de]</a></li>
+                        <li><a href="/hc/en/faq/">Styx Help Center FAQ</a></li>
                     </ul>
                 </nav>
             </div>
             <div class="col-document__wrapper col-document__wrapper-documents">
                 <div class="col-document">
-                    <h1>Styx Help Center [en] - Categories</h1>
-                    <p><a href="index.html"><span class="icon arrow-left">←</span> back to main page</a></p>
+                    <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en]">⌘</a></span> - Categories</h1>
+                    <ul class="document-nav">
+                        <li class="document-up"><a href="index.html"><span class="icon arrow-left">←</span> back to main page</a></li>
+                        <li class="document-current">« Categories »</li>
+                        <li class="document-next"><a href="approving-comments.html">Approving Comments <span class="icon arrow-right">→</span></a></li>
+                    </ul>
                     <h2 id="docs-manage-categories">Manage categories</h2>
 
                     <p>Inside the “Content” menu in the Authoring Suite you will find the link “Categories”. You can use this option to create, edit or delete new entry categories. There is no limit to the number of categories you can create. Each category has the following options:</p>
