--- a/hc/en/import-export.html
+++ b/hc/en/import-export.html
@@ -82,17 +82,21 @@
             <div class="col-menu__wrapper">
                 <nav class="col-menu" role="navigation" aria-label="Help Center [en] documents navigation">
                     <ul>
-                        <li><a href="/hc">Styx Help Center</a></li>
-                        <li><a href="/hc/en">Documentation [en]</a></li>
-                        <li><a href="/hc/de">Dokumentation [de]</a></li>
-                        <li><a href="/hc/en/faq">Styx Help Center FAQ</a></li>
+                        <li><a href="/hc/"><img src="/i/info_icon-64.png" width="32" height="32"> Styx Help Center</a></li>
+                        <li><a href="/hc/en/">Documentation [en]</a></li>
+                        <li><a href="/hc/de/">Dokumentation [de]</a></li>
+                        <li><a href="/hc/en/faq/">Styx Help Center FAQ</a></li>
                     </ul>
                 </nav>
             </div>
             <div class="col-document__wrapper col-document__wrapper-documents">
                 <div class="col-document">
-                    <h1>Styx Help Center [en] - Im-/Export</h1>
-                    <p><a href="index.html"><span class="icon arrow-left">←</span> back to main page</a></p>
+                    <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en]">⌘</a></span> - Im-/Export</h1>
+                    <ul class="document-nav">
+                        <li class="document-up"><a href="index.html"><span class="icon arrow-left">←</span> back to main page</a></li>
+                        <li class="document-current">« Im-/Export »</li>
+                        <li class="document-next"><a href="statistics.html">Statistics <span class="icon arrow-right">→</span></a></li>
+                    </ul>
                     <h2 id="docs-importexport-entries">Import/Export Entries</h2>
                     <p>On this page you can import entries from your past/older blogs. There are several sources to choose from: Native Word Press, moveableType, b2evo and other systems are supported. After you have selected the source of your blog you may need to specify additional options to the database access, so that Serendipity can fetch your old entries/users/categories/comments and import them into your Serendipity blog.</p>
                     <p>If your old blog application is not listed, you can still try to use the “Generic” import. This import fetches the RSS feed of your blog and inserts all entries it can find into your Serendipity blog. Note that with this you cannot import users, comments or categories! Some blog systems only show the latest 15 or so items of your old blog, so you may need to search for an option in your old blog to make the RSS feed show all contents.</p>
