--- a/hc/en/ssl-encrypting.html
+++ b/hc/en/ssl-encrypting.html
@@ -82,17 +82,21 @@
             <div class="col-menu__wrapper">
                 <nav class="col-menu" role="navigation" aria-label="Help Center [en] documents navigation">
                     <ul>
-                        <li><a href="/hc">Styx Help Center</a></li>
-                        <li><a href="/hc/en">Documentation [en]</a></li>
-                        <li><a href="/hc/de">Dokumentation [de]</a></li>
-                        <li><a href="/hc/en/faq">Styx Help Center FAQ</a></li>
+                        <li><a href="/hc/"><img src="/i/info_icon-64.png" width="32" height="32"> Styx Help Center</a></li>
+                        <li><a href="/hc/en/">Documentation [en]</a></li>
+                        <li><a href="/hc/de/">Dokumentation [de]</a></li>
+                        <li><a href="/hc/en/faq/">Styx Help Center FAQ</a></li>
                     </ul>
                 </nav>
             </div>
             <div class="col-document__wrapper col-document__wrapper-documents">
                 <div class="col-document">
-                    <h1>Styx Help Center [en] - HTTPS</h1>
-                    <p><a href="index.html"><span class="icon arrow-left">←</span> back to main page</a></p>
+                    <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en]">⌘</a></span> - SSL encryption (HTTPS)</h1>
+                    <ul class="document-nav">
+                        <li class="document-up"><a href="index.html"><span class="icon arrow-left">←</span> back to main page</a></li>
+                        <li class="document-current">« SSL encryption (HTTPS) »</li>
+                        <li class="document-next"><a href="configuration.html">Configuration <span class="icon arrow-right">→</span></a></li>
+                    </ul>
                     <h2>Using SSL encryption for your blog</h2>
 
                     <p>In this times it is very important for your reader to care about their privacy. Therefor more and more sites use SSL encryption (HTTPS) to transmit data safely from the webserver to the users browser. Search engines like google will rank sites better if they are using encryption. For yourself it is safer to type the password for the login to your backend via an ecrypted connection.
