--- a/hc/en/index.html
+++ b/hc/en/index.html
@@ -82,10 +82,10 @@
             <div class="col-menu__wrapper">
                 <nav class="col-menu" role="navigation" aria-label="Help Center [en] documents navigation">
                     <ul>
-                        <li><a href="/hc">Styx Help Center</a></li>
-                        <li><a href="/hc/en">Documentation [en]</a></li>
-                        <li><a href="/hc/de">Dokumentation [de]</a></li>
-                        <li><a href="/hc/en/faq">Styx Help Center FAQ</a></li>
+                        <li><a href="/hc/"><img src="/i/info_icon-64.png" width="32" height="32"> Styx Help Center</a></li>
+                        <li><a href="/hc/en/">Documentation [en]</a></li>
+                        <li><a href="/hc/de/">Dokumentation [de]</a></li>
+                        <li><a href="/hc/en/faq/">Styx Help Center FAQ</a></li>
                     </ul>
                 </nav>
             </div>
@@ -93,6 +93,7 @@
                 <div class="col-document">
                   <h1>Styx Help Center [en]</h1>
                   <h2 id="docs-user-documentation">User documentation</h2>
+                  <h3>Take a « <a href="preparing-db.html">guided tour</a> » here.</h3>
 
                   <ul>
                     <li><a href="admin-interface.html">Admin interface</a></li>
