--- a/hc/en/themes.html
+++ b/hc/en/themes.html
@@ -82,17 +82,21 @@
             <div class="col-menu__wrapper">
                 <nav class="col-menu" role="navigation" aria-label="Help Center [en] documents navigation">
                     <ul>
-                        <li><a href="/hc">Styx Help Center</a></li>
-                        <li><a href="/hc/en">Documentation [en]</a></li>
-                        <li><a href="/hc/de">Dokumentation [de]</a></li>
-                        <li><a href="/hc/en/faq">Styx Help Center FAQ</a></li>
+                        <li><a href="/hc/"><img src="/i/info_icon-64.png" width="32" height="32"> Styx Help Center</a></li>
+                        <li><a href="/hc/en/">Documentation [en]</a></li>
+                        <li><a href="/hc/de/">Dokumentation [de]</a></li>
+                        <li><a href="/hc/en/faq/">Styx Help Center FAQ</a></li>
                     </ul>
                 </nav>
             </div>
             <div class="col-document__wrapper col-document__wrapper-documents">
                 <div class="col-document">
-                    <h1>Styx Help Center [en] - Themes</h1>
-                    <p><a href="index.html"><span class="icon arrow-left">←</span> back to main page</a></p>
+                    <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en]">⌘</a></span> - Themes</h1>
+                    <ul class="document-nav">
+                        <li class="document-up"><a href="index.html"><span class="icon arrow-left">←</span> back to main page</a></li>
+                        <li class="document-current">« Themes »</li>
+                        <li class="document-next"><a href="using-plugins.html">Plugins <span class="icon arrow-right">→</span></a></li>
+                    </ul>
                     <h2 id="docs-manage-themes">Manage Themes</h2>
 
                     <p>Themes, also known as “Styles” or “Templates”, are just one of the ways that you can personalise your new Serendipity blog. Themes are available to install directly from your administration screen, or you could download a zipfile of the theme from the Serendipity repository, or even from the designer’s own blog.</p>
