hc: Replace the "Styx Help Center [en]" title with a linked "place-of-interest" icon for the technical documentary too

--- a/hc/en/templating.html
+++ b/hc/en/templating.html
@@ -91,7 +91,7 @@
             </div>
             <div class="col-document__wrapper col-document__wrapper-documents">
                 <div class="col-document">
-                    <h1>Styx Help Center [en] - Templating</h1>
+                    <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en]">⌘</a></span> - Templating</h1>
                     <p><a href="index.html"><span class="icon arrow-left">←</span> back to main page</a></p>
                     <h2 id="docs-themes-and-smarty-templating">Themes and Smarty Templating</h2>
 
