--- a/hc/en/i18n.html
+++ b/hc/en/i18n.html
@@ -91,7 +91,7 @@
             </div>
             <div class="col-document__wrapper col-document__wrapper-documents">
                 <div class="col-document">
-                    <h1>Styx Help Center [en] - Languages</h1>
+                    <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en]">⌘</a></span> - Languages</h1>
                     <p><a href="index.html"><span class="icon arrow-left">←</span> back to main page</a></p>
                     <h2 id="docs-languagesi18n">Languages/i18n</h2>
 
