--- a/hc/en/plugin-api.html
+++ b/hc/en/plugin-api.html
@@ -91,7 +91,7 @@
             </div>
             <div class="col-document__wrapper col-document__wrapper-documents">
                 <div class="col-document">
-                    <h1>Styx Help Center [en] - Plugin-API</h1>
+                    <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en]">⌘</a></span> - Plugin-API</h1>
                     <p><a href="index.html"><span class="icon arrow-left">←</span> back to main page</a></p>
                     <h2>Plugin API</h2>
 
